tests/org.eclipse.php.core.tests/src/org/eclipse/php/core/tests/errors/PHP7ErrorReportingTests#PHP7ErrorReportingTests(String[]).mjava
	public PHP7ErrorReportingTests(String[] fileNames) {
		super(fileNames);
	}

